--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "siemstress-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,19 @@
   },
   "homepage": "https://github.com/Siemstress/backend#readme",
   "dependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^17.0.21",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.41",
     "typescript": "^4.6.2"
+  },
+  "devDependencies": {
+    "ts-node": "^10.6.0"
   }
 }
