--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/geoip-lite": "^1.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.21",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "geoip-lite": "^1.4.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
